@@ -2,6 +2,7 @@ We are grateful to these people for their comments, help, or
 suggestions.
 
 Akim Demaille
+Anton Pirogov
 Ayrat Khalimov
 Caroline Lemieux
 Christian Dax
